app/static/css/default.css
/* Core styles */
#header a {
    text-decoration: none;
    color: black;
}

#header a:hover {
    color: #0d6efd;
    text-decoration: none;
    cursor: pointer;
}

#menu {
    position: absolute;
    top: 0;
    right: 0;
    z-index: 1;
}

a.icon > i {
    font-size: 24px;
}

a.icon {
    align-items: center;
    display: flex;
}

/* Custom classes */
.edit-time-entry {
    cursor: pointer;
    color: #0d6efd;
}

.time-badge {
    height: 20px;
    width: 60px;
}

.notification-badge {
    position: absolute;
    top: 3px;
    left: 1.8rem;
    border-radius: 50%;
    padding: 0.25rem;
    transform: translate(-50%, -50%);
}

/* Bootstrap overrides */
.accordion-button::after,
.accordion-button:not(.collapsed)::after {
    content: none;
}

.dropdown-item:active {
    background-color: #e9ecef;
}

/* Debug bar */
.debug-bar {
    width: 100vw;
    height: 25px;
    background-color: rebeccapurple;
    text-align: center;
    color: white;
    font-weight: bold;
}

